--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
       laboriosam et nisi quasi tenetur nobis beatae repudiandae nihil? Impedit
       dolores sint sunt?
     </p>
+    <button>click</button>
   </body>
 </html>
